[gd_scene load_steps=9 format=3 uid="uid://2vriyonhucnw"]

[ext_resource type="Script" path="res://Scenes/PlayableCharacters/ParentPlayer.gd" id="1_wimjr"]
[ext_resource type="PackedScene" uid="uid://d2c4ccnfltmr1" path="res://Scenes/Components/Health/health_component.tscn" id="2_j1i6e"]
[ext_resource type="PackedScene" uid="uid://c8wqavxm6m0q" path="res://Scenes/Components/Hitbox/hitbox_component.tscn" id="3_iandt"]
[ext_resource type="PackedScene" uid="uid://c73ovdjp0q4wx" path="res://Scenes/Components/Velocity/velocity.tscn" id="4_r0ura"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plhdv"]
bg_color = Color(0.0117647, 0.0156863, 0.0196078, 0.662745)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndmsn"]
bg_color = Color(0.223529, 0.713726, 0.235294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="CircleShape2D" id="CircleShape2D_l0qu6"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qfkk6"]

[node name="PlayableCharacter" type="CharacterBody2D" groups=["player"]]
scale = Vector2(2, 2)
collision_mask = 8
script = ExtResource("1_wimjr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Weapons" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Weapons"]
position = Vector2(-30, -20)

[node name="Marker2D2" type="Marker2D" parent="Weapons"]
position = Vector2(-30, 20)

[node name="Marker2D3" type="Marker2D" parent="Weapons"]
position = Vector2(30, -20)

[node name="Marker2D4" type="Marker2D" parent="Weapons"]
position = Vector2(30, 20)

[node name="Marker2D5" type="Marker2D" parent="Weapons"]
position = Vector2(30, 0)

[node name="Marker2D6" type="Marker2D" parent="Weapons"]
position = Vector2(-30, 0)

[node name="HealthComponent" parent="." instance=ExtResource("2_j1i6e")]
unique_name_in_owner = true

[node name="Velocity" parent="." instance=ExtResource("4_r0ura")]
unique_name_in_owner = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "hit_box_shape") instance=ExtResource("3_iandt")]
unique_name_in_owner = true
collision_mask = 38
health_component = NodePath("../HealthComponent")
hit_box_shape = NodePath("CollisionShape2D")
timerDuration = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]

[node name="CharacterBodyShape" type="CollisionShape2D" parent="."]

[node name="ProgressBar2" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 1
offset_left = -10.0
offset_top = -25.0
offset_right = 11.0
offset_bottom = -19.0
theme_override_styles/background = SubResource("StyleBoxFlat_plhdv")
theme_override_styles/fill = SubResource("StyleBoxFlat_ndmsn")
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = 125
limit_top = 55
limit_right = 800
limit_bottom = 525
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_l0qu6")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_qfkk6")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="dead" from="HealthComponent" to="." method="_on_health_component_dead"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
